<resources>
    <string name="revanced_about_summary">" - xfileFIN (First creator) - oSumAtrIX (Patches, Patcher, Support) - TheJeterLP (Patches, Integrations) - bogadana (Patches, Support) - Sculas (Manager, Patcher) - baiorett (Manager)"</string>
    <string name="revanced_about_title">About</string>
    <string name="revanced_auto_repeat_button_summary_off">"Doesn't show auto-repeat button in the player overlay. Use the toggle below to control auto-repeat"</string>
    <string name="revanced_auto_repeat_button_summary_on">Auto-repeat button is shown in the player overlay</string>
    <string name="revanced_auto_repeat_button_title">Auto-repeat button</string>
    <string name="revanced_auto_repeat_summary_off">Auto-repeat is off</string>
    <string name="revanced_auto_repeat_summary_on">Auto-repeat is on</string>
    <string name="revanced_auto_repeat_title">Auto-repeat</string>
    <string name="revanced_branding_watermark_summary_off">Video watermark is hidden</string>
    <string name="revanced_branding_watermark_summary_on">Video watermark is shown</string>
    <string name="revanced_branding_watermark_title">Video watermark</string>
    <string name="revanced_buffer_title">Buffer settings</string>
    <string name="revanced_cast_button_summary_off">Cast button is hidden</string>
    <string name="revanced_cast_button_summary_on">Cast button is shown</string>
    <string name="revanced_cast_button_title">Cast button</string>
    <string name="revanced_codec_override_title">Codec override</string>
    <string name="revanced_current_override_manufacturer">Manufacturer override</string>
    <string name="revanced_current_override_model">Model override</string>
    <string name="revanced_debug_summary_off">Extra debug logging is disabled</string>
    <string name="revanced_debug_summary_on">Extra Debug logging is enabled</string>
    <string name="revanced_debug_title">Debug mode</string>
    <string name="revanced_default_codec_summary">Tap to set your device\'s default codec</string>
    <string name="revanced_default_codec_title">Default codec</string>
    <string name="revanced_discord_summary">Tap to join ReVanced on Discord</string>
    <string name="revanced_discord_title">Discord server</string>
    <string name="revanced_hdr_full_brightness_summary_on">Video brightness will follow your device\'s brightness on HDR landscape videos</string>
    <string name="revanced_hdr_full_brightness_summary_off">Video brightness is set to max on HDR landscape videos</string>
    <string name="revanced_hdr_full_brightness_title">Override HDR Video Brightness</string>
    <string name="revanced_info_cards_summary_off">Info cards are hidden</string>
    <string name="revanced_info_cards_summary_on">Info cards are shown</string>
    <string name="revanced_info_cards_title">Info cards</string>
    <string name="revanced_layout_settings_title">Layout settings</string>
    <string name="revanced_maximum_buffer_summary">"The maximum duration of media that the player will attempt to buffer (in milliseconds)

        Default: 120000"</string>
    <string name="revanced_maximum_buffer_title">Maximum buffer</string>
    <string name="revanced_misc_title">Misc.</string>
    <string name="revanced_override_resolution_summary_off">Video resolution is following your device screen resolution</string>
    <string name="revanced_override_resolution_summary_on">Video resolution is being overridden to max</string>
    <string name="revanced_override_resolution_title">Max resolution</string>
    <string name="revanced_playback_start_summary">"The duration of media that must be buffered for playback to start or resume following a user action such as seeking (in milliseconds)

        Default: 2500"</string>
    <string name="revanced_playback_start_title">Playback start</string>
    <string name="revanced_preferred_video_quality_mobile_summary">Select preferred video resolution on Cellular Network</string>
    <string name="revanced_preferred_video_quality_mobile_title">Preferred video quality Cellular</string>
    <string name="revanced_preferred_video_quality_wifi_summary">Select preferred video resolution on Wi-Fi Network</string>
    <string name="revanced_preferred_video_quality_wifi_title">Preferred video quality Wi-Fi</string>
    <string name="revanced_preferred_video_speed_summary">Select preferred video speed</string>
    <string name="revanced_preferred_video_speed_title">Preferred video speed</string>
    <string name="revanced_rebuffer_summary">"The duration of media that must be buffered for playback to resume after a rebuffer (in milliseconds). A rebuffer is defined to be caused by buffer depletion rather than a user action

        Default: 5000"</string>
    <string name="revanced_rebuffer_title">Rebuffer</string>
    <string name="revanced_suggestion_summary_off">End screens are hidden</string>
    <string name="revanced_suggestion_summary_on">End screens are shown</string>
    <string name="revanced_suggestion_title">End screens</string>
    <string name="revanced_support_summary">Support links</string>
    <string name="revanced_support_title">Support</string>
    <string name="revanced_video_settings_title">Video settings</string>
    <string name="revanced_vp9_summary">Tap to force usage of the VP9 codec</string>
    <string name="revanced_vp9_summary_off">VP9 codec not forced</string>
    <string name="revanced_vp9_summary_on">VP9 codec is enabled by default for supported devices, disable if you encounter stuttering/slowness in videos</string>
    <string name="revanced_vp9_title">VP9 codec</string>
    <string name="revanced_new_actionbar_title">Wide search bar</string>
    <string name="revanced_new_actionbar_summary_off">Search bar style is defined by the app</string>
    <string name="revanced_new_actionbar_summary_on">Forcing wide search bar</string>
    <string name="revanced_shorts_button_title">Show shorts button</string>
    <string name="revanced_shorts_button_summary_off">Shorts button is hidden</string>
    <string name="revanced_shorts_button_summary_on">Shorts button is shown</string>
    <string name="revanced_zoom_to_fit_vertical_title">Dynamic player</string>
    <string name="revanced_zoom_to_fit_vertical_summary_off">Dynamic player is defined automatically</string>
    <string name="revanced_zoom_to_fit_vertical_summary_on">Dynamic player is forced on square and vertical videos</string>
    <string name="revanced_about_theme_summary">New official theme toggle is in the General settings. This theme toggle is \"Developer\" toggle</string>
    <string name="revanced_about_theme_title">Theme info</string>
    <string name="revanced_accessibility_seek_buttons_summary_off">Accessibility controls aren\'t displayed in the player</string>
    <string name="revanced_accessibility_seek_buttons_summary_on">Accessibility controls are displayed in the player</string>
    <string name="revanced_accessibility_seek_buttons_title">Accessibility player</string>
    <string name="revanced_auto_captions_summary_off">Captions aren\'t enabled automatically at 0% volume </string>
    <string name="revanced_auto_captions_summary_on">Captions are enabled automatically at 0% volume</string>
    <string name="revanced_auto_captions_title">Auto captions</string>
    <string name="revanced_swipe_padding_top_summary">Amount of pixels excluded from swiping at the top of the display to prevent swipe controls when dragging down notifications</string>
    <string name="revanced_swipe_padding_top_title">Swipe padding</string>
    <string name="revanced_swipe_threshold_summary">Amount of pixels you have to swipe until detecting starts to prevent unintended swiping</string>
    <string name="revanced_swipe_threshold_title">Swipe threshold</string>
    <string name="revanced_xfenster_brightness_summary_off">Swipe controls for brightness are disabled</string>
    <string name="revanced_xfenster_brightness_summary_on">Swipe controls for brightness are enabled</string>
    <string name="revanced_xfenster_brightness_title">Swipe controls for Brightness</string>
    <string name="revanced_xfenster_screen_summary">Swipe controls for Brightness and Volume</string>
    <string name="revanced_xfenster_title">Swipe controls</string>
    <string name="revanced_xfenster_volume_summary_off">Swipe controls for volume are disabled</string>
    <string name="revanced_xfenster_volume_summary_on">Swipe controls for volume are enabled</string>
    <string name="revanced_xfenster_volume_title">Swipe controls for Volume</string>
    <string name="revanced_swipe_pts_title">Press-to-Swipe</string>
    <string name="revanced_swipe_pts_summary_off">Swipe controls are always active</string>
    <string name="revanced_swipe_pts_summary_on">Swipe controls require a long-press before activating</string>
    <string name="revanced_swipe_pts_haptic_title">Vibrate on Press-to-Swipe</string>
    <string name="revanced_swipe_pts_haptic_summary_on">You\'ll get haptic feedback when activating Press-to-Swipe</string>
    <string name="revanced_swipe_pts_haptic_summary_off">You won\'t get haptic feedback when activating Press-to-Swipe</string>
    <string name="revanced_swipe_overlay_timeout_title">Overlay Timeout</string>
    <string name="revanced_swipe_overlay_timeout_summary">How long the overlay is shown after changes (ms)</string>
    <string name="revanced_swipe_overlay_text_size_title">Overlay Text Size</string>
    <string name="revanced_swipe_overlay_text_size_summary">Text size on the overlay</string>
    <string name="revanced_swipe_overlay_bg_alpha_title">Overlay Background Transparency</string>
    <string name="revanced_swipe_overlay_bg_alpha_summary">Transparency value of the overlay background (0–255)</string>
    <string name="revanced_swipe_magnitude_threshold_title">Swipe Magnitude Threshold</string>
    <string name="revanced_swipe_magnitude_threshold_summary">Minimum magnitude before a swipe is detected</string>
    <string name="revanced_website_summary">Tap to open our website</string>
    <string name="revanced_website_title">ReVanced website</string>
    <string name="revanced_home_ads_summary_off">Home ADS are hidden</string>
    <string name="revanced_home_ads_summary_on">Home ADS are shown</string>
    <string name="revanced_home_ads_title">Home ADS</string>
    <string name="revanced_video_ads_title">Video ADS</string>
    <string name="revanced_video_ads_summary_off">Video ADS are hidden</string>
    <string name="revanced_video_ads_summary_on">Video ADS are shown</string>
    <string name="revanced_reel_summary_off">Stories are hidden</string>
    <string name="revanced_reel_summary_on">Stories are shown</string>
    <string name="revanced_reel_title">YouTube stories</string>
    <string name="revanced_ad_settings_title">AD settings</string>
    <string name="revanced_credit_summary">Credits for people who have contributed</string>
    <string name="revanced_credit_title">Credits</string>
    <string name="souramoo_summary">Home ADS removing enhancement and showed other kinds of debugging methods</string>
    <string name="souramoo_title" translatable="false">souramoo</string>
    <string name="bawm_summary">SponsorBlock implementation</string>
    <string name="bawm_title" translatable="false">JakubWeg</string>
    <string name="cane_summary">Enhancements to SponsorBlock implementation</string>
    <string name="cane_title" translatable="false">cane</string>
    <string name="oizaro_summary">Bug fixing/helping out</string>
    <string name="oizaro_title" translatable="false">Oizaro</string>
    <string name="sb_settings">SponsorBlock settings</string>
    <string name="sb_summary">Uses the sponsor.ajay.app API</string>
    <string name="revanced_settings">ReVanced settings</string>
    <string name="revanced_ryd_settings_title">Return YouTube Dislike settings</string>
    <string name="revanced_ryd_settings_summary">Uses the RYD API</string>
</resources>